app/assets/stylesheets/components/appFooter.scss
.appFooter {
  align-items: center;
  background-color: white;
  box-sizing: border-box;
  color: $color-grey-text;
  padding: 0 $padding-main-content;
  width: 100%;

  @include center-and-limit-content-width();
}

  .appFooter-logos {
    padding-bottom: 20px;
  }

    .appFooter-logos-container {
      display: inline-block;
    }

    .appFooter-logos-item {
      display: inline-block;
      padding: 5px 9px;
    }

    .appFooter-logos-item.mod-jumpstart {
      margin: 0;

      .appFooter-logos-item-image {
        padding-left: 6px;
        vertical-align: -10px;
      }
    }

